feat: 添加文件与病人详情接口
